--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "mongoose": "^5.6.2",
     "nodemailer": "^6.2.1",
     "nodemailer-sendgrid-transport": "^0.2.0",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {},
   "scripts": {
